--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+	----- version 1.8.2 ------
+	
+2025-12-14  Mark Lindner  <markl@neuromancer>
+
+	* doc/libconfig.texi - Minor documentation updates
+	* configure.ac - Version bump
+
 	----- version 1.8.1 ------
 
 2025-05-28  Mark Lindner  <markl@neuromancer>
